# coat

./: Cargo.toml  LICENSE  README.md
examples/: play.rs  store.rs
src/: action.rs  app.rs  bloom.rs  constraints.rs  context.rs  cx.rs  demo.rs  env.rs  event.rs  ext_event.rs  id.rs  lib.rs  main.rs  mouse.rs  mutation.rs  object.rs  render.rs  testing.rs  toyapp.rs  tree.rs  ui.rs  window.rs
src/app/: application.rs  handle.rs  mod.rs  win_handler.rs  window.rs
src/context/: window.rs
src/elements/: button.rs  column.rs  mod.rs  padding.rs
src/state/: mod.rs  mutable.rs  store.rs
src/states/: mutable.rs
src/text/: attribute.rs  editable_text.rs  editor.rs  font_descriptor.rs  format.rs  layout.rs  mod.rs  rich_text.rs  selection.rs  storage.rs  text_input.rs
src/tree/: content.rs  element.rs  entry.rs  handled.rs  mod.rs  mutation.rs
src/widgets/: button.rs  flex.rs  label.rs  mod.rs  padding.rs  quad.rs  sized_box.rs  textbox.rs
