[package]
name = "coat"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
fnv = "1.0.7"
log = "0.4.11"
simple_logger = "1.11.0"
unicode-segmentation = "1.7.1"
xi-unicode = "0.3.0"
